# FUSE-stable

./: requirements.txt
fuse_v2/: README_v2.md  README_v2.txt
fuse_v2/FUSE2p02/: pyproject.toml  setup.py
fuse_v2/FUSE2p02/fuse202/: __init__.py  all.py  assemble_spp.py  assemble_structure_2.py  assemble_structure_generator.py  bond_table.py  config.py  constant.py  create_random_instructions.py  create_random_string.py  error_check_structure.py  extract_modules.py  generate_random_structure.py  get_distances.py  gulp.py  make_basin_move.py  make_new_structure.py  plot_results.py  possible_solutions.py  run_chgnet.py  run_fuse.py  run_gulp.py  run_multiple_calculators.py  run_qe.py  run_vasp.py  test_bonds.py
fuse_v2/FUSE2p02/fuse202/utils/: directories.py  file_ops.py
fuse_v2/example_input_files/: fgen_SPP_input.py  fgen_chgnet_input.py  fgen_input.py  mlgen_SPP_input.py  mlgen_chgnet_input.py  mlgen_input.py
